--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               </div>
             </div>  <!-- fim das postagens-->
            
-          <div class="col-md-4 "  > <!-- inicio da barra lateral-->
+          <div class="col-md-4 desaparecer"  > <!-- inicio da barra lateral-->
             <div class="mb-3 d-sm-none d-md-block"> <!-- EVENTOS-->
               <h3 style="border-bottom: 1px solid #E6E6E6">Eventos</h3>
 
